--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 * {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
 }
 
 body {
@@ -30,6 +30,7 @@ body {
   line-height: 23px;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
   transition: all 0.1s ease-in-out;
+  margin: 10px;
 
   &:hover {
     box-shadow: 0 8px 10px rgba(0, 0, 0, 0.1);
